<resources>
    <string name="app_name">Password_Test</string>
    <string name="text_view_menu">Menu</string>
    <string name="input_name">Name: </string>
    <string name="input_password">Password: </string>
    <string name="button_confirm">Confirm</string>
    <string name="button_create_new_account">Create New Account</string>
    <string name="input_confirm_password">Confirm Password: </string>
    <string name="input_birthday">Birthday: </string>

</resources>
