<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.programmingbros.android.password_test.MainActivity">

    <TextView
        android:text="@string/text_view_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:textStyle="bold"
        android:id="@+id/id_menu"/>

    <Button
        android:text="@string/button_create_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/id_create_new_account"
        android:layout_below="@+id/id_confirm_account"
        android:layout_alignEnd="@+id/id_inputPassword"
        android:layout_marginEnd="59dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:id="@+id/id_inputName"
        android:layout_below="@+id/id_menu"
        android:layout_marginTop="27dp"
        android:layout_alignStart="@+id/id_inputPassword"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:id="@+id/id_inputPassword"
        android:layout_below="@+id/id_inputName"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/id_menu"/>

    <TextView
        android:text="@string/input_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_alignBaseline="@+id/id_inputPassword"
        android:layout_alignBottom="@+id/id_inputPassword"
        android:layout_toStartOf="@+id/id_inputName"/>

    <TextView
        android:text="@string/input_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/id_inputName"
        android:layout_alignBottom="@+id/id_inputName"
        android:layout_alignStart="@+id/textView7"/>

    <Button
        android:text="@string/button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_confirm_account"
        android:layout_below="@+id/id_inputPassword"
        android:layout_alignStart="@+id/id_create_new_account"
        android:layout_alignEnd="@+id/id_create_new_account"/>


</RelativeLayout>
